--- a/zh-cn/about/index.html
+++ b/zh-cn/about/index.html
@@ -16,12 +16,12 @@
 
 
 
-  <link rel="stylesheet" type="text/css" href="/vendors/fancybox/source/jquery.fancybox.css?v=2.1.5"/>
+  <link rel="stylesheet" type="text/css" href="/zh-cn/vendors/fancybox/source/jquery.fancybox.css?v=2.1.5"/>
 
 
 
 
-<link rel="stylesheet" type="text/css" href="/css/main.css?v=0.4.4"/>
+<link rel="stylesheet" type="text/css" href="/zh-cn/css/main.css?v=0.4.4"/>
 
 
 
@@ -81,7 +81,7 @@
     <header id="header" class="header" itemscope itemtype="http://schema.org/WPHeader">
         <div class="header-inner"><h1 class="site-meta">
   <span class="logo-line-before"><i></i></span>
-  <a href="/" class="brand" rel="start">
+  <a href="/zh-cn/" class="brand" rel="start">
       <span class="logo">
         <i class="icon-logo"></i>
       </span>
@@ -146,7 +146,7 @@
       
         
         <li class="menu-item menu-item-english">
-          <a href="/../" rel="section">
+          <a href="/zh-cn/../" rel="section">
             <i class="menu-item-icon icon-english"></i> <br />
             menu.english
           </a>
@@ -307,7 +307,7 @@
     <div class="back-to-top"></div>
 </div>
 
-<script type="text/javascript" src="/vendors/jquery/index.js?v=2.1.3"></script>
+<script type="text/javascript" src="/zh-cn/vendors/jquery/index.js?v=2.1.3"></script>
 
   
   
@@ -320,21 +320,21 @@
 
   
   
-  <script type="text/javascript" src="/vendors/fancybox/source/jquery.fancybox.pack.js"></script>
-  <script type="text/javascript" src="/js/fancy-box.js?v=0.4.4"></script>
+  <script type="text/javascript" src="/zh-cn/vendors/fancybox/source/jquery.fancybox.pack.js"></script>
+  <script type="text/javascript" src="/zh-cn/js/fancy-box.js?v=0.4.4"></script>
 
 
-  <script type="text/javascript" src="/js/helpers.js?v=0.4.4"></script>
+  <script type="text/javascript" src="/zh-cn/js/helpers.js?v=0.4.4"></script>
   
 
-  <script type="text/javascript" src="/vendors/velocity/velocity.min.js"></script>
-  <script type="text/javascript" src="/vendors/velocity/velocity.ui.min.js"></script>
+  <script type="text/javascript" src="/zh-cn/vendors/velocity/velocity.min.js"></script>
+  <script type="text/javascript" src="/zh-cn/vendors/velocity/velocity.ui.min.js"></script>
 
-  <script type="text/javascript" src="/js/motion_global.js?v=0.4.4" id="motion.global"></script>
+  <script type="text/javascript" src="/zh-cn/js/motion_global.js?v=0.4.4" id="motion.global"></script>
 
 
 
-  <script type="text/javascript" src="/js/search-toggle.js"></script>
+  <script type="text/javascript" src="/zh-cn/js/search-toggle.js"></script>
 
 
 
@@ -354,11 +354,11 @@
 
 
 <!-- lazyload -->
-<script type="text/javascript" src="/js/lazyload.js"></script>
+<script type="text/javascript" src="/zh-cn/js/lazyload.js"></script>
 <script type="text/javascript">
     jQuery(function () {
         jQuery("#posts img").lazyload({
-            placeholder: "/images/loading.gif",
+            placeholder: "/zh-cn/images/loading.gif",
             effect: "fadeIn"
         });
     });
