--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       
         
           <span itemprop="articleBody"><h1 id="Foreword"><center>Foreword</center></h1><p>This is a guide book for fresh man in high-performance &amp; high-flexibility distributed system field.</p>
-<p>This is not a teaching material, beacuse it cannot teach a beginner to implement a high-performance service or a high-performance application server step by step.<br>This is just a guide. On the way a fresh man become a proficient distributed architect or system architect, it can tell the man, waht will he encounter, which is the key point, and which solutions can reference to.</p>
+<p>This is not a teaching material, beacuse it cannot teach a beginner to implement a high-performance service or a high-performance application server step by step.<br>This is just a guide. On the way a fresh man become a proficient distributed architect or system architect, it can tell the man, what will he encounter, which is the key point, and which solutions can reference to.</p>
 <p>According to the original idea, this introduction will involve the following aspects:</p>
 <ul>
 <li>What is the high-performance? And what is the high-flexibility?</li>
